--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-Silly Clicky Things coming soon!
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Silly Clicky Things</title>
+
+    <!-- counter.dev analytics -->
+    <script src="https://cdn.counter.dev/script.js"
+            data-id="0738f13f-0c45-4dc5-8912-f18d6766a843"
+            data-utcoffset="0"></script>
+</head>
+<body>
+    <h1>Welcome to Silly Clicky Things!</h1>
+    <p>Watch this space we're coming soon!</p>
+</body>
+</html>
