--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,6 +9,8 @@
     <script src="https://cdn.counter.dev/script.js"
             data-id="0738f13f-0c45-4dc5-8912-f18d6766a843"
             data-utcoffset="0"></script>
+
+    <meta name="google-site-verification" content="joAorAxKwzYep5JybdSaFzleef91tKhWqGm6ABCo9uM" />
 </head>
 <body>
     <h1>Welcome to Silly Clicky Things!</h1>
