--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
 </head>
 <body>
     <h1>Welcome to Silly Clicky Things!</h1>
-    <p>Watch this space we're coming soon!</p>
+    <p>Watch this space we're coming soon with silly clicky games!🐸🐱 </p>
 </body>
 </html>
