--- a/index.html
+++ b/index.html
@@ -11,9 +11,224 @@
             data-utcoffset="0"></script>
 
     <meta name="google-site-verification" content="joAorAxKwzYep5JybdSaFzleef91tKhWqGm6ABCo9uM" />
+
+    <style>
+        :root {
+            --bg: #050816;
+            --card-bg: #0f172a;
+            --accent: #e879f9;
+            --accent-soft: rgba(232, 121, 249, 0.2);
+            --text-main: #f9fafb;
+            --text-sub: #9ca3af;
+        }
+
+        * {
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
+        }
+
+        body {
+            min-height: 100vh;
+            font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+                         sans-serif;
+            background: radial-gradient(circle at top, #1e293b 0, #020617 55%, #000 100%);
+            color: var(--text-main);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 1.5rem;
+        }
+
+        .container {
+            max-width: 540px;
+            width: 100%;
+            background: linear-gradient(145deg, #020617, #020617);
+            border-radius: 1.5rem;
+            padding: 2.2rem 2rem 2.4rem;
+            border: 1px solid rgba(148, 163, 184, 0.3);
+            box-shadow:
+                0 18px 45px rgba(15, 23, 42, 0.9),
+                0 0 0 1px rgba(15, 23, 42, 0.7);
+            position: relative;
+            overflow: hidden;
+        }
+
+        .glow {
+            position: absolute;
+            inset: -40%;
+            background:
+                radial-gradient(circle at 0% 0%, rgba(56, 189, 248, 0.12), transparent 55%),
+                radial-gradient(circle at 100% 100%, rgba(232, 121, 249, 0.20), transparent 55%);
+            opacity: 0.85;
+            pointer-events: none;
+            z-index: 0;
+        }
+
+        .content {
+            position: relative;
+            z-index: 1;
+        }
+
+        .tagline {
+            display: inline-flex;
+            align-items: center;
+            gap: 0.45rem;
+            padding: 0.25rem 0.8rem;
+            border-radius: 999px;
+            background-color: rgba(15, 23, 42, 0.9);
+            border: 1px solid rgba(148, 163, 184, 0.45);
+            font-size: 0.78rem;
+            letter-spacing: 0.08em;
+            text-transform: uppercase;
+            color: var(--text-sub);
+            margin-bottom: 1.4rem;
+        }
+
+        .tagline-dot {
+            width: 0.5rem;
+            height: 0.5rem;
+            border-radius: 999px;
+            background: radial-gradient(circle, var(--accent) 0, #22d3ee 100%);
+            box-shadow: 0 0 12px rgba(236, 72, 153, 0.8);
+        }
+
+        h1 {
+            font-size: clamp(2.1rem, 4vw, 2.6rem);
+            margin-bottom: 0.75rem;
+        }
+
+        h1 span {
+            background: linear-gradient(120deg, #f97316, #ec4899, #38bdf8);
+            -webkit-background-clip: text;
+            background-clip: text;
+            color: transparent;
+        }
+
+        .subtitle {
+            font-size: 0.98rem;
+            color: var(--text-sub);
+            max-width: 30rem;
+            line-height: 1.6;
+            margin-bottom: 1.7rem;
+        }
+
+        .subtitle-emoji {
+            font-size: 1.1rem;
+        }
+
+        .cta-row {
+            display: flex;
+            flex-wrap: wrap;
+            align-items: center;
+            gap: 0.9rem;
+        }
+
+        .btn-primary {
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            gap: 0.55rem;
+            padding: 0.7rem 1.4rem;
+            border-radius: 999px;
+            border: 1px solid rgba(248, 250, 252, 0.12);
+            font-weight: 600;
+            font-size: 0.95rem;
+            text-decoration: none;
+            color: #020617;
+            background: radial-gradient(circle at 0 0, #e0f2fe 0, #f97316 36%, #ec4899 82%);
+            box-shadow:
+                0 10px 35px rgba(249, 115, 22, 0.55),
+                0 0 0 1px rgba(15, 23, 42, 0.8);
+            transform: translateY(0);
+            transition:
+                transform 0.15s ease-out,
+                box-shadow 0.15s ease-out,
+                filter 0.15s ease-out;
+            cursor: pointer;
+            white-space: nowrap;
+        }
+
+        .btn-primary:hover {
+            transform: translateY(-1px) scale(1.01);
+            box-shadow:
+                0 15px 45px rgba(248, 113, 113, 0.75),
+                0 0 0 1px rgba(15, 23, 42, 0.9);
+            filter: brightness(1.02);
+        }
+
+        .btn-primary:active {
+            transform: translateY(0) scale(0.99);
+            box-shadow:
+                0 6px 16px rgba(15, 23, 42, 0.9),
+                0 0 0 1px rgba(15, 23, 42, 0.95);
+            filter: brightness(0.98);
+        }
+
+        .btn-emoji {
+            font-size: 1.2rem;
+        }
+
+        .hint {
+            font-size: 0.8rem;
+            color: var(--text-sub);
+        }
+
+        .footer-note {
+            margin-top: 2rem;
+            font-size: 0.78rem;
+            color: var(--text-sub);
+            display: flex;
+            align-items: center;
+            gap: 0.4rem;
+            opacity: 0.9;
+        }
+
+        .footer-note span {
+            opacity: 0.6;
+        }
+
+        @media (max-width: 480px) {
+            .container {
+                padding: 1.8rem 1.4rem 2.1rem;
+            }
+        }
+    </style>
 </head>
 <body>
-    <h1>Welcome to Silly Clicky Things!</h1>
-    <p>Watch this space we're coming soon with silly clicky games!🐸🐱 </p>
+    <main class="container">
+        <div class="glow" aria-hidden="true"></div>
+
+        <div class="content">
+            <div class="tagline">
+                <span class="tagline-dot"></span>
+                <span>Coming soon</span>
+                <span>•</span>
+                <span>Very serious clicking research</span>
+            </div>
+
+            <h1>Welcome to <span>Silly Clicky Things</span></h1>
+
+            <p class="subtitle">
+                Tiny pointless websites. Extremely important clicks.
+                The games are brewing behind the scenes — frogs, cats & other oddities incoming.
+                <span class="subtitle-emoji">🐸🐱</span>
+            </p>
+
+            <div class="cta-row">
+                <a class="btn-primary" href="generators/rabbitpaw/index.html">
+                    <span class="btn-emoji">🐇</span>
+                    <span>Click the Lucky Rabbit Paw</span>
+                </a>
+                <span class="hint">Start your luck-streak while we build the rest.</span>
+            </div>
+
+            <div class="footer-note">
+                <span>🔧</span>
+                <span>More silly clicky experiments will appear here soon. Refresh occasionally for the sake of science.</span>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
+
