Add sitemap and tidy

--- a/index.html
+++ b/index.html
@@ -53,5 +53,14 @@
         </div>
         </div>
     </main>
+
+    <footer class="sct-footer">
+        <a href="/privacy.html" target="_blank" rel="noopener">Privacy</a>
+        <span class="sep">•</span>
+        <a href="/terms.html" target="_blank" rel="noopener">Terms</a>
+        <span class="sep">•</span>
+        <a href="/contact.html" target="_blank" rel="noopener">Contact</a>
+    </footer>
+
     </body>
 </head>
