--- a/generators/rabbitpaw/index.html
+++ b/generators/rabbitpaw/index.html
@@ -43,5 +43,13 @@
 
   <script src="data/messages.js"></script>
   <script src="script.js"></script>
+
+  <footer class="sct-footer">
+    <a href="/privacy.html" target="_blank" rel="noopener">Privacy</a>
+    <span class="sep">•</span>
+    <a href="/terms.html" target="_blank" rel="noopener">Terms</a>
+    <span class="sep">•</span>
+    <a href="/contact.html" target="_blank" rel="noopener">Contact</a>
+  </footer>
 </body>
 </html>
