--- a/generators/rabbitpaw/index.html
+++ b/generators/rabbitpaw/index.html
@@ -15,41 +15,46 @@
 </head>
 
 <body class="sct-page">
-  <!-- Game Frame -->
-  <div class="sct-game-frame">
-    <div id="container">
-      <div id="luck-badge">Luck: 0</div>
-      <h1 id="game-title" class="sct-game-title">Lucky Rabbit Paw 🐇</h1>
+  <main class="sct-main">
+    <div class="sct-shell">
 
-      <p id="game-desc" class="sct-game-subtitle">
-        Tap the magical rabbit paw for instant luck, sparkles and positive vibes.
-      </p>
+      <!-- Game Frame -->
+      <div class="sct-game-frame">
+        <div id="container">
+          <div id="luck-badge">Luck: 0</div>
+          <h1 id="game-title" class="sct-game-title">Lucky Rabbit Paw 🐇</h1>
 
-      <img
-        id="paw"
-        src="images/rabbit_paw.png"
-        alt="White and Pink Rabbit Paw"
-        class="sct-game-button"
-      />
+          <p id="game-desc" class="sct-game-subtitle">
+            Tap the magical rabbit paw for instant luck, sparkles and positive vibes.
+          </p>
 
-      <div class="sct-message-wrap">
-        <p id="message" class="sct-counter">
-          Click the lucky rabbit's paw!
-        </p>
-        
+          <img
+            id="paw"
+            src="images/rabbit_paw.png"
+            alt="White and Pink Rabbit Paw"
+            class="sct-game-button"
+          />
+
+          <div class="sct-message-wrap">
+            <p id="message" class="sct-counter">
+              Click the lucky rabbit's paw!
+            </p>
+          </div>
+        </div>
       </div>
+
+      <footer class="sct-footer">
+        <a href="/privacy.html" target="_blank" rel="noopener">Privacy</a>
+        <span class="sep">•</span>
+        <a href="/terms.html" target="_blank" rel="noopener">Terms</a>
+        <span class="sep">•</span>
+        <a href="/contact.html" target="_blank" rel="noopener">Contact</a>
+      </footer>
+
     </div>
-  </div>
+  </main>
 
   <script src="data/messages.js"></script>
   <script src="script.js"></script>
-
-  <footer class="sct-footer">
-    <a href="/privacy.html" target="_blank" rel="noopener">Privacy</a>
-    <span class="sep">•</span>
-    <a href="/terms.html" target="_blank" rel="noopener">Terms</a>
-    <span class="sep">•</span>
-    <a href="/contact.html" target="_blank" rel="noopener">Contact</a>
-  </footer>
 </body>
 </html>
