--- a/index.html
+++ b/index.html
@@ -9,58 +9,63 @@
     <script src="https://cdn.counter.dev/script.js"
             data-id="0738f13f-0c45-4dc5-8912-f18d6766a843"
             data-utcoffset="0"></script>
-    <!-- google serach console -->
+
+    <!-- google search console -->
     <meta name="google-site-verification" content="joAorAxKwzYep5JybdSaFzleef91tKhWqGm6ABCo9uM" />
 
     <!-- Global CSS -->
     <link rel="stylesheet" href="/css/base.css">
     <link rel="stylesheet" href="/css/theme.css">
     <link rel="stylesheet" href="/css/utils.css">
+</head>
+<body class="sct-page sct-landing-page">
+    <main class="sct-main">
+        <div class="sct-shell">
 
+            <div class="sct-container">
+                <div class="sct-glow" aria-hidden="true"></div>
 
-    <body class="sct-page sct-landing-page">
-    <main class="sct-container">
-        <div class="sct-glow" aria-hidden="true"></div>
+                <div class="sct-content">
+                    <div class="sct-tagline">
+                        <span class="sct-tagline-dot"></span>
+                        <span>Coming soon</span>
+                        <span>•</span>
+                        <span>Very serious clicking research</span>
+                    </div>
 
-        <div class="sct-content">
-        <div class="sct-tagline">
-            <span class="sct-tagline-dot"></span>
-            <span>Coming soon</span>
-            <span>•</span>
-            <span>Very serious clicking research</span>
-        </div>
+                    <h1 class="sct-heading">
+                        Welcome to <span>Silly Clicky Things</span>
+                    </h1>
 
-        <h1 class="sct-heading">
-            Welcome to <span>Silly Clicky Things</span>
-        </h1>
+                    <p class="sct-subtitle">
+                        Tiny pointless websites. Extremely important clicks.
+                        The games are brewing behind the scenes. Witches, frogs, blobs, potatoes, cats &amp; other oddities incoming. 🐸🐱
+                    </p>
 
-        <p class="sct-subtitle">
-            Tiny pointless websites. Extremely important clicks.
-            The games are brewing behind the scenes. Witches, frogs, blobs, potatoes, cats & other oddities incoming. 🐸🐱
-        </p>
+                    <div class="sct-cta-row">
+                        <a class="sct-btn-primary" href="generators/rabbitpaw/index.html">
+                            <span class="sct-btn-emoji">🐇</span>
+                            <span>Click the Lucky Rabbit Paw</span>
+                        </a>
+                        <span class="sct-hint">Start your lucky streak while we build the rest.</span>
+                    </div>
 
-        <div class="sct-cta-row">
-            <a class="sct-btn-primary" href="generators/rabbitpaw/index.html">
-            <span class="sct-btn-emoji">🐇</span>
-            <span>Click the Lucky Rabbit Paw</span>
-            </a>
-            <span class="sct-hint">Start your lucky streak while we build the rest.</span>
-        </div>
+                    <div class="sct-footer-note">
+                        <span>🔧</span>
+                        <span>More silly clicky experiments will appear here soon. Refresh occasionally for the sake of science and silly fun times.</span>
+                    </div>
+                </div>
+            </div>
 
-        <div class="sct-footer-note">
-            <span>🔧</span>
-            <span>More silly clicky experiments will appear here soon. Refresh occasionally for the sake of science and silly fun times.</span>
-        </div>
+            <footer class="sct-footer">
+                <a href="/privacy.html" target="_blank" rel="noopener">Privacy</a>
+                <span class="sep">•</span>
+                <a href="/terms.html" target="_blank" rel="noopener">Terms</a>
+                <span class="sep">•</span>
+                <a href="/contact.html" target="_blank" rel="noopener">Contact</a>
+            </footer>
+
         </div>
     </main>
-
-    <footer class="sct-footer">
-        <a href="/privacy.html" target="_blank" rel="noopener">Privacy</a>
-        <span class="sep">•</span>
-        <a href="/terms.html" target="_blank" rel="noopener">Terms</a>
-        <span class="sep">•</span>
-        <a href="/contact.html" target="_blank" rel="noopener">Contact</a>
-    </footer>
-
-    </body>
-</head>
+</body>
+</html>
