--- a/about.html
+++ b/about.html
@@ -1,76 +1,130 @@
-<h1>About Silly Clicky Things</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>About Silly Clicky Things</title>
 
-<p>
-Welcome to <strong>Silly Clicky Things</strong> — the tiny corner of the internet where nothing serious happens
-</p>
+    <!-- counter.dev analytics -->
+    <script src="https://cdn.counter.dev/script.js"
+            data-id="0738f13f-0c45-4dc5-8912-f18d6766a843"
+            data-utcoffset="0"></script>
 
-<p>
-I’m Kate, a human person who really should be doing sensible adult, boring things.
-Instead  I spend my evenings creating <em>pointless little games</em> like 
-“Tap the Lucky Rabbit Paw”, “CatXP” and whatever other nonsense my brain 
-cooks up at some ungodly hour. With a good strong cuppa and mischievous cat close by.
-</p>
+    <!-- google search console -->
+    <meta name="google-site-verification" content="joAorAxKwzYep5JybdSaFzleef91tKhWqGm6ABCo9uM" />
 
-<h2>Why does this website exist?</h2>
+    <!-- Global CSS -->
+    <link rel="stylesheet" href="/css/base.css">
+    <link rel="stylesheet" href="/css/theme.css">
+    <link rel="stylesheet" href="/css/utils.css">
+</head>
+<body class="sct-page">
+    <main class="sct-main">
+        <div class="sct-shell">
 
-<p>
-Because life is stressful enough. Sometimes you don’t want a productivity app, a 
-30-day challenge or a life-changing masterclass. Sometimes you just want to 
-<strong>click a potato</strong> and feel a tiny micro-dose of joy. 
-</p>
+            <div class="sct-container">
+                <div class="sct-glow" aria-hidden="true"></div>
 
-<p>
-This site is a growing collection of:
-</p>
+                <div class="sct-content">
+                    <div class="sct-tagline">
+                        <span class="sct-tagline-dot"></span>
+                        <span>About</span>
+                        <span>•</span>
+                        <span>Extremely unserious internet experiments</span>
+                    </div>
 
-<ul>
-  <li>Simple clicker games</li>
-  <li>Weird little generators</li>
-  <li>Pointless digital toys</li>
-  <li>Animals and inanimate objects that judge you, fart, or encourage you, depending on their mood</li>
-  <li>Pure, wholesome, “I should be doing something else” energy</li>
-</ul>
+                    <h1 class="sct-heading">
+                        About <span>Silly Clicky Things</span>
+                    </h1>
 
-<p>
-If you’re bored, procrastinating, avoiding responsibilities, taking a break from doomscrolling, 
-or just need something silly to brighten your day... it's OK. You’re in the right place.
-</p>
+                    <div class="sct-article">
 
-<h2>The Grand Plan</h2>
+                      <p class="sct-subtitle">
+                          Welcome to <strong>Silly Clicky Things</strong> — the tiny corner of the internet where nothing serious happens
+                      </p>
 
-<p>
-Build a huge collection of fun, free mini-games that people can tap, poke, 
-pet, boop, slap, sparkle, shout at or otherwise interact with. Think of it as an arcade full of 
-digital fidget toys, weird vibes and (perhaps) questionable life choices. 
-</p>
+                      <h2>Who am I?</h2>
+                      <p>
+                      I’m Kate, a human person who really should be doing sensible adult, boring things.
+                      Instead  I spend my evenings creating <em>pointless little games</em> like 
+                      “Lucky Rabbit Paw”, “CatXP” or whatever other nonsense my brain 
+                      dreams up. With a good strong cuppa and mischievous cat close by.
+                      </p>
 
-<p>
-I am also attempting to escape the 9–5 and build something joyful on the internet. I'm over being a serious person who does serious, grown up things
-If that resonates with you then welcome to the club! Feel free to bring snacks. Preferably custard.
-</p>
+                      <h2>Why does this website exist?</h2>
 
-<h2>What’s Coming Next?</h2>
+                      <p>
+                      Because life is stressful enough. Sometimes you don’t want a productivity app, a
+                      life-changing masterclass or god forbid, yet another
+                      36,921.80 day challenge. Sometimes you just want to 
+                      <strong>click a potato</strong> and feel a tiny micro-dose of joy. 
+                      </p>
 
-<p>
-More games. More categories. More animals. More silly noises and unabashed AI art.  
-And probably a few ideas that make me question my own sanity, but I’ll ship them anyway.
-</p>
+                      <p>
+                      This site is a growing collection of:
+                      </p>
 
-<p>
-If you want updates, check the homepage occasionally or follow along on Pinterest and TikTok. 
-I’m building this whole thing out loud.
-</p>
+                      <ul>
+                        <li>Simple clicker games</li>
+                        <li>Weird little generators</li>
+                        <li>Pointless digital toys</li>
+                        <li>Animals and inanimate objects that judge you, fart, or encourage you, depending on their mood</li>
+                        <li>Pure, wholesome, “I should be doing something else” energy</li>
+                      </ul>
+
+                      <p>
+                      If you’re bored, procrastinating, avoiding responsibilities, taking a break from doomscrolling, 
+                      or just need something silly to brighten your day... it's OK. You’re in the right place.
+                      </p>
+
+                      <h2>The Grand Plan</h2>
+
+                      <p>
+                      Build a huge collection of fun, free mini-games that people can tap, poke, 
+                      pet, boop, slap, sparkle, shout at or otherwise interact with. Think of it as an arcade full of 
+                      digital fidget toys, weird stuff and questionable life choices. 
+                      </p>
+
+                      <p>
+                      I am also attempting to escape the 9–5 and build something joyful on the internet. I'm over being a serious person who does serious, grown up things
+                      If that resonates with you then welcome to the club! Feel free to bring snacks. Preferably custard.
+                      </p>
+
+                      <h2>What’s Coming Next?</h2>
+
+                      <p>
+                      More games. More categories. More animals. More silly noises and AI art.  
+                      And probably a few ideas that make me question my own sanity, but I’ll ship them anyway.
+                      </p>
+
+                      <p>
+                      If you want updates, check the homepage occasionally or follow along on Pinterest and TikTok. 
+                      </p>
 
 
-<p>
-If you're still reading, wow. And thanks! You're a good egg.
-</p>
+                      <p>
+                      If you're still reading, wow. And thanks! You're a good egg.🥚
+                      </p>
 
-<h2>Contact</h2>
+                      <h2>Contact</h2>
 
-<p>
-Got a game idea? See a bug? Want to say hi?  
-Head over to the <a href="/contact.html">Contact page</a>. I love hearing from fellow clickers.
-</p>
+                      <p>
+                      Got a game idea? See a bug? Want to say hi?  
+                      Head over to the <a href="/contact.html">Contact page</a>.  I love hearing from fellow clickers.
+                      </p>
 
-<p><strong>Thanks for being here. Now go click something pointless.</strong></p>
+                      <p><strong>Thanks for being here. Now go click something pointless.</strong></p>
+                    </div> <!-- .sct-article -->
+                </div> <!-- .sct-content -->
+              </div>   <!-- .sct-container -->
+            </div>     <!-- .sct-shell -->
+          </main>
+
+      <div id="site-footer"></div>
+      <script>
+        fetch('/includes/footer.html')
+          .then(r => r.text())
+          .then(html => document.getElementById('site-footer').innerHTML = html);
+      </script>
+    </body>
+</html>
