--- a/generators/rabbitpaw/index.html
+++ b/generators/rabbitpaw/index.html
@@ -42,19 +42,22 @@
           </div>
         </div>
       </div>
-
-      <footer class="sct-footer">
-        <a href="/privacy.html" target="_blank" rel="noopener">Privacy</a>
-        <span class="sep">•</span>
-        <a href="/terms.html" target="_blank" rel="noopener">Terms</a>
-        <span class="sep">•</span>
-        <a href="/contact.html" target="_blank" rel="noopener">Contact</a>
-      </footer>
+      <div id="site-footer"></div>
+        <script>
+            fetch('/includes/footer.html')
+            .then(response => response.text())
+            .then(html => {
+                document.getElementById('site-footer').innerHTML = html;
+            });
+        </script>
+      
 
     </div>
   </main>
 
   <script src="data/messages.js"></script>
   <script src="script.js"></script>
+
+  
 </body>
 </html>
