--- a/about.html
+++ b/about.html
@@ -1,27 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Charset -->
     <meta charset="UTF-8" />
+
+    <!-- Title -->
+    <title>About – Silly Clicky Things</title>
+
+    <!-- Viewport -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About Silly Clicky Things</title>
 
-    <!-- counter.dev analytics -->
-    <script src="https://cdn.counter.dev/script.js"
-            data-id="0738f13f-0c45-4dc5-8912-f18d6766a843"
-            data-utcoffset="0"></script>
+    <!-- SEO -->
+    <meta name="description"
+          content="Learn why Silly Clicky Things exists: tiny, pointless games made for boredom, curiosity and small moments of joy. No productivity. No pressure. Just totally free fun." />
+    <link rel="canonical" href="https://sillyclickythings.com/about.html" />
+    <meta name="robots" content="index, follow" />
 
-    <!-- google search console -->
-    <meta name="google-site-verification" content="joAorAxKwzYep5JybdSaFzleef91tKhWqGm6ABCo9uM" />
+    <!-- Verification -->
+    <meta name="google-site-verification"
+          content="joAorAxKwzYep5JybdSaFzleef91tKhWqGm6ABCo9uM" />
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="article" />
+    <meta property="og:site_name" content="Silly Clicky Things" />
+    <meta property="og:title"
+          content="About – Silly Clicky Things" />
+    <meta property="og:description"
+          content="Learn why Silly Clicky Things exists: tiny, pointless games made for boredom, curiosity and small moments of joy. No productivity. No pressure. Just totally free fun." />
+    <meta property="og:url" content="https://sillyclickythings.com/about.html" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title"
+          content="About – Silly Clicky Things" />
+    <meta name="twitter:description"
+          content="Learn why Silly Clicky Things exists: tiny, pointless games made for boredom, curiosity and small moments of joy. No productivity. No pressure. Just totally free fun." />
+
+    <!-- JSON-LD -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "AboutPage",
+      "name": "About – Silly Clicky Things",
+      "url": "https://sillyclickythings.com/about.html",
+      "description": "Learn why Silly Clicky Things exists: tiny, pointless games made for boredom, curiosity and small moments of joy. No productivity. No pressure. Just totally free fun."
+    }
+    </script>
 
     <!-- Global CSS -->
     <link rel="stylesheet" href="/css/base.css">
     <link rel="stylesheet" href="/css/theme.css">
     <link rel="stylesheet" href="/css/utils.css">
+
+    <!-- counter.dev analytics -->
+    <script src="https://cdn.counter.dev/script.js"
+            data-id="0738f13f-0c45-4dc5-8912-f18d6766a843"
+            data-utcoffset="0"></script>
 </head>
 <body class="sct-page">
     <main class="sct-main">
         <div class="sct-shell">
-
+            <div id="site-header"></div>
             <div class="sct-container">
                 <div class="sct-glow" aria-hidden="true"></div>
 
