--- a/generators/tap-the-lucky-rabbit-paw/index.html
+++ b/generators/tap-the-lucky-rabbit-paw/index.html
@@ -3,7 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Lucky Rabbit Paw</title>
+  <title>Tap the Lucky Rabbit Paw</title>
+   <meta name="description"
+          content="Tap the Lucky Rabbit Paw for a tiny burst of nonsense luck. A silly, browser-based generator with no downloads, no accounts and no higher purpose." />
+    <link rel="canonical" href="https://sillyclickythings.com/generators/tap-the-lucky-rabbit-paw/" />
+    <meta name="robots" content="index, follow" />
 
   <!-- Global CSS -->
   <link rel="stylesheet" href="/css/base.css" />
@@ -19,9 +23,13 @@
     <div class="sct-shell">
 
       <!-- Game Frame -->
+     <div class="sct-container">
+    <div class="sct-glow" aria-hidden="true"></div>
+
+    <div class="sct-content">
       <div class="sct-game-frame">
         <div id="container">
-          <div id="luck-badge">Luck: 0</div>
+             <div id="luck-badge">Luck: 0</div>
           <h1 id="game-title" class="sct-game-title">Lucky Rabbit Paw 🐇</h1>
 
           <p id="game-desc" class="sct-game-subtitle">
