--- a/generators/index.html
+++ b/generators/index.html
@@ -1,19 +1,116 @@
-<h1>Generators</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <!-- Charset -->
+    <meta charset="UTF-8" />
 
-<p>
-Small, silly generators for mild amusement.
-</p>
+    <!-- Title -->
+    <title>Generators – Silly Clicky Things</title>
 
-<ul>
-  <li><a href="/generators/rabbitspaw/">Rabbit’s Paw</a></li>
-</ul>
+    <!-- Viewport -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<div id="site-footer"></div>
+    <!-- SEO -->
+    <meta name="description"
+          content="Small, silly generators for mild amusement. Tap a button, get nonsense, feel slightly better for no good reason." />
+    <link rel="canonical" href="https://sillyclickythings.com/generators/" />
+    <meta name="robots" content="index, follow" />
 
-<script>
-fetch('/includes/footer.html')
-  .then(r => r.text())
-  .then(html => {
-    document.getElementById('site-footer').innerHTML = html;
-  });
-</script>
+    <!-- Verification -->
+    <meta name="google-site-verification"
+          content="joAorAxKwzYep5JybdSaFzleef91tKhWqGm6ABCo9uM" />
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Silly Clicky Things" />
+    <meta property="og:title"
+          content="Generators – Silly Clicky Things" />
+    <meta property="og:description"
+          content="Small, silly generators for mild amusement. Tap a button, get nonsense, feel slightly better for no good reason." />
+    <meta property="og:url" content="https://sillyclickythings.com/generators/" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title"
+          content="Generators – Silly Clicky Things" />
+    <meta name="twitter:description"
+          content="Small, silly generators for mild amusement. Tap a button, get nonsense, feel slightly better for no good reason." />
+
+    <!-- JSON-LD -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "CollectionPage",
+      "name": "Generators – Silly Clicky Things",
+      "url": "https://sillyclickythings.com/generators/",
+      "description": "Small, silly generators for mild amusement. Tap a button, get nonsense, feel slightly better for no good reason."
+    }
+    </script>
+
+    <!-- Global CSS -->
+    <link rel="stylesheet" href="/css/base.css">
+    <link rel="stylesheet" href="/css/theme.css">
+    <link rel="stylesheet" href="/css/utils.css">
+
+    <!-- counter.dev analytics -->
+    <script src="https://cdn.counter.dev/script.js"
+            data-id="0738f13f-0c45-4dc5-8912-f18d6766a843"
+            data-utcoffset="0"></script>
+</head>
+
+<body class="sct-page">
+    <main class="sct-main">
+        <div class="sct-shell">
+
+            <!-- Header include -->
+            <div id="site-header"></div>
+
+            <div class="sct-container">
+                <div class="sct-glow" aria-hidden="true"></div>
+
+                <div class="sct-content">
+                    <div class="sct-tagline">
+                        <span class="sct-tagline-dot"></span>
+                        <span>Generators</span>
+                        <span>•</span>
+                        <span>Small buttons. Big nonsense.</span>
+                    </div>
+
+                    <h1 class="sct-heading">
+                        Silly <span>Generators</span>
+                    </h1>
+
+                    <div class="sct-article">
+                        <p class="sct-subtitle">
+                            Small, silly generators for mild amusement. Tap a thing, get nonsense.
+                        </p>
+
+                        <ul>
+                            <li>
+                                <a href="/generators/tap-the-lucky-rabbit-paw/">Tap the Lucky Rabbit Paw</a>
+                            </li>
+                        </ul>
+
+                        <p>
+                            More coming soon. As soon as my fingers can keep up with my brain.)
+                        </p>
+                    </div> <!-- .sct-article -->
+                </div> <!-- .sct-content -->
+            </div> <!-- .sct-container -->
+        </div> <!-- .sct-shell -->
+    </main>
+
+    <!-- Footer include -->
+    <div id="site-footer"></div>
+
+    <script>
+      fetch('/includes/header.html')
+        .then(r => r.text())
+        .then(html => document.getElementById('site-header').innerHTML = html);
+
+      fetch('/includes/footer.html')
+        .then(r => r.text())
+        .then(html => document.getElementById('site-footer').innerHTML = html);
+    </script>
+</body>
+</html>
