--- a/index.html
+++ b/index.html
@@ -2,29 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <title>Silly Clicky Things – Tiny Games, Pointless Buttons & Free Clicker Toys</title>
-
-    <!-- Viewport -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <link rel="stylesheet" href="/css/main.css" />
+    
+    <title>Silly Clicky Things – Tiny Games, Pointless Buttons & Free Clicker Toys</title>
     <!-- SEO -->
     <meta name="description"
           content="Silly Clicky Things is a growing collection of tiny, pointless games, oddly satisfying buttons and fun generators. Totally free. No downloads. No accounts. Just silly browser-based fun." />
     <link rel="canonical" href="https://sillyclickythings.com/" />
-    <meta name="robots" content="index, follow" />
-
-    <!-- Verification -->
-    <meta name="google-site-verification"
-          content="joAorAxKwzYep5JybdSaFzleef91tKhWqGm6ABCo9uM" />
-
-    <!-- counter.dev analytics -->
-    <script src="https://cdn.counter.dev/script.js"
-            data-id="0738f13f-0c45-4dc5-8912-f18d6766a843"
-            data-utcoffset="0"></script>
 
     <!-- Open Graph -->
-    <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="Silly Clicky Things" />
     <meta property="og:title"
           content="Silly Clicky Things – Tiny Games & Pointless Fun" />
     <meta property="og:description"
@@ -32,9 +19,7 @@
     <meta property="og:url" content="https://sillyclickythings.com/" />
     <!-- Optional image later -->
     <!-- <meta property="og:image" content="https://sillyclickythings.com/og/home.png" /> -->
-
-    <!-- Twitter Card -->
-    <meta name="twitter:card" content="summary" />
+    <!-- Twitter -->
     <meta name="twitter:title"
           content="Silly Clicky Things – Tiny Games & Pointless Fun" />
     <meta name="twitter:description"
@@ -52,9 +37,7 @@
       "description": "Silly Clicky Things is a growing collection of tiny, pointless games, oddly satisfying buttons and fun generators. Totally free. No downloads. No accounts. Just silly browser-based fun."
     }
     </script>
-
-    <!-- Global CSS -->
-    <link rel="stylesheet" href="/css/main.css">
+  <script src="/js/include-head.js"></script>
 
 </head>
 
