--- a/privacy.html
+++ b/privacy.html
@@ -2,30 +2,24 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Privacy Policy – Silly Clicky Things</title>
-
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="/css/main.css" />
+
+  <title>Privacy Policy – Silly Clicky Things</title>
 
   <!-- SEO -->
   <meta name="description"
         content="Privacy policy for Silly Clicky Things. We do not require accounts, collect personal data, or sell information. Just silly games and simple analytics." />
   <link rel="canonical" href="https://sillyclickythings.com/privacy.html" />
-  <meta name="robots" content="index, follow" />
-
-  <!-- Verification -->
-  <meta name="google-site-verification"
-        content="joAorAxKwzYep5JybdSaFzleef91tKhWqGm6ABCo9uM" />
 
   <!-- Open Graph -->
   <meta property="og:type" content="article" />
-  <meta property="og:site_name" content="Silly Clicky Things" />
   <meta property="og:title" content="Privacy Policy – Silly Clicky Things" />
   <meta property="og:description"
         content="Privacy policy for Silly Clicky Things. We do not require accounts, collect personal data or sell information. Just silly games and simple analytics." />
   <meta property="og:url" content="https://sillyclickythings.com/privacy.html" />
 
-  <!-- Twitter Card -->
-  <meta name="twitter:card" content="summary" />
+  <!-- Twitter -->
   <meta name="twitter:title" content="Privacy Policy – Silly Clicky Things" />
   <meta name="twitter:description"
         content="Privacy policy for Silly Clicky Things. We do not require accounts, collect personal data or sell information. Just silly games and simple analytics." />
@@ -40,14 +34,8 @@
     "description": "Privacy policy for Silly Clicky Things. We do not require accounts, collect personal data or sell information. Just silly games and simple analytics."
   }
   </script>
+  <script src="/js/include-head.js"></script>
 
-  <!-- Global CSS -->
-  <link rel="stylesheet" href="/css/main.css" />
-
-  <!-- counter.dev analytics -->
-  <script src="https://cdn.counter.dev/script.js"
-          data-id="0738f13f-0c45-4dc5-8912-f18d6766a843"
-          data-utcoffset="0"></script>
 </head>
 
 <body class="sct-page">
