--- a/about.html
+++ b/about.html
@@ -2,30 +2,24 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>About – Silly Clicky Things</title>
-
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="/css/main.css" />
+
+  <title>About – Silly Clicky Things</title>
 
   <!-- SEO -->
   <meta name="description"
         content="Learn why Silly Clicky Things exists: tiny, pointless games made for boredom, curiosity and small moments of joy. No productivity. No pressure. Just totally free fun." />
   <link rel="canonical" href="https://sillyclickythings.com/about.html" />
-  <meta name="robots" content="index, follow" />
-
-  <!-- Verification -->
-  <meta name="google-site-verification"
-        content="joAorAxKwzYep5JybdSaFzleef91tKhWqGm6ABCo9uM" />
 
   <!-- Open Graph -->
   <meta property="og:type" content="article" />
-  <meta property="og:site_name" content="Silly Clicky Things" />
   <meta property="og:title" content="About – Silly Clicky Things" />
   <meta property="og:description"
         content="Learn why Silly Clicky Things exists: tiny, pointless games made for boredom, curiosity and small moments of joy. No productivity. No pressure. Just totally free fun." />
   <meta property="og:url" content="https://sillyclickythings.com/about.html" />
 
   <!-- Twitter Card -->
-  <meta name="twitter:card" content="summary" />
   <meta name="twitter:title" content="About – Silly Clicky Things" />
   <meta name="twitter:description"
         content="Learn why Silly Clicky Things exists: tiny, pointless games made for boredom, curiosity and small moments of joy. No productivity. No pressure. Just totally free fun." />
@@ -40,14 +34,7 @@
     "description": "Learn why Silly Clicky Things exists: tiny, pointless games made for boredom, curiosity and small moments of joy. No productivity. No pressure. Just totally free fun."
   }
   </script>
-
-  <!-- Global CSS -->
-  <link rel="stylesheet" href="/css/main.css" />
-
-  <!-- counter.dev analytics -->
-  <script src="https://cdn.counter.dev/script.js"
-          data-id="0738f13f-0c45-4dc5-8912-f18d6766a843"
-          data-utcoffset="0"></script>
+  <script src="/js/include-head.js"></script>
 </head>
 
 <body class="sct-page">
