--- a/contact.html
+++ b/contact.html
@@ -2,30 +2,24 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Contact – Silly Clicky Things</title>
-
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="/css/main.css" />
+  
+  <title>Contact – Silly Clicky Things</title>
 
   <!-- SEO -->
   <meta name="description"
         content="Contact Silly Clicky Things. Report a bug, suggest a silly idea or say hi. We love hearing from fellow button clickers." />
   <link rel="canonical" href="https://sillyclickythings.com/contact.html" />
-  <meta name="robots" content="index, follow" />
-
-  <!-- Verification -->
-  <meta name="google-site-verification"
-        content="joAorAxKwzYep5JybdSaFzleef91tKhWqGm6ABCo9uM" />
-
+  
   <!-- Open Graph -->
   <meta property="og:type" content="article" />
-  <meta property="og:site_name" content="Silly Clicky Things" />
   <meta property="og:title" content="Contact – Silly Clicky Things" />
   <meta property="og:description"
         content="Contact Silly Clicky Things. Report a bug, suggest a silly idea or say hi. We love hearing from fellow button clickers." />
   <meta property="og:url" content="https://sillyclickythings.com/contact.html" />
 
   <!-- Twitter Card -->
-  <meta name="twitter:card" content="summary" />
   <meta name="twitter:title" content="Contact – Silly Clicky Things" />
   <meta name="twitter:description"
         content="Contact Silly Clicky Things. Report a bug, suggest a silly idea or say hi. We love hearing from fellow button clickers." />
@@ -40,14 +34,7 @@
     "description": "Contact Silly Clicky Things. Report a bug, suggest a silly idea or say hi. We love hearing from fellow button clickers."
   }
   </script>
-
-  <!-- Global CSS -->
-  <link rel="stylesheet" href="/css/main.css" />
-
-  <!-- counter.dev analytics -->
-  <script src="https://cdn.counter.dev/script.js"
-          data-id="0738f13f-0c45-4dc5-8912-f18d6766a843"
-          data-utcoffset="0"></script>
+  <script src="/js/include-head.js"></script>
 </head>
 
 <body class="sct-page">
