--- a/generators/tap-the-lucky-rabbit-paw/index.html
+++ b/generators/tap-the-lucky-rabbit-paw/index.html
@@ -2,30 +2,26 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Tap the Lucky Rabbit Paw – Silly Clicky Things</title>
-
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="/css/main.css" />
+    <!-- Page-specific CSS -->
+  <link rel="stylesheet" href="style.css" />
+
+  <title>Tap the Lucky Rabbit Paw – Silly Clicky Things</title>
 
   <!-- SEO -->
   <meta name="description"
         content="Tap the Lucky Rabbit Paw for a tiny burst of nonsense luck. A silly, browser-based generator with no downloads, no accounts and no higher purpose." />
   <link rel="canonical" href="https://sillyclickythings.com/generators/tap-the-lucky-rabbit-paw/" />
-  <meta name="robots" content="index, follow" />
-
-  <!-- Verification -->
-  <meta name="google-site-verification"
-        content="joAorAxKwzYep5JybdSaFzleef91tKhWqGm6ABCo9uM" />
 
   <!-- Open Graph -->
   <meta property="og:type" content="website" />
-  <meta property="og:site_name" content="Silly Clicky Things" />
   <meta property="og:title" content="Tap the Lucky Rabbit Paw" />
   <meta property="og:description"
         content="Tap the Lucky Rabbit Paw for a tiny burst of nonsense luck. A silly, browser-based generator with no downloads, no accounts and no higher purpose." />
   <meta property="og:url" content="https://sillyclickythings.com/generators/tap-the-lucky-rabbit-paw/" />
 
   <!-- Twitter Card -->
-  <meta name="twitter:card" content="summary" />
   <meta name="twitter:title" content="Tap the Lucky Rabbit Paw" />
   <meta name="twitter:description"
         content="Tap the Lucky Rabbit Paw for a tiny burst of nonsense luck. No downloads. No accounts. Just clicking." />
@@ -42,17 +38,7 @@
     "operatingSystem": "All"
   }
   </script>
-
-  <!-- Global CSS -->
-  <link rel="stylesheet" href="/css/main.css" />
-
-  <!-- Page-specific CSS -->
-  <link rel="stylesheet" href="style.css" />
-
-  <!-- counter.dev analytics -->
-  <script src="https://cdn.counter.dev/script.js"
-          data-id="0738f13f-0c45-4dc5-8912-f18d6766a843"
-          data-utcoffset="0"></script>
+  <script src="/js/include-head.js"></script>
 </head>
 
 <body class="sct-page">
