--- a/terms.html
+++ b/terms.html
@@ -2,19 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Terms of Use – Silly Clicky Things</title>
-
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="/css/main.css" />
+
+  <title>Terms of Use – Silly Clicky Things</title>
 
   <!-- SEO -->
   <meta name="description"
         content="Terms of use for Silly Clicky Things, a website offering free, silly, pointless online games and generators for entertainment purposes only." />
   <link rel="canonical" href="https://sillyclickythings.com/terms.html" />
-  <meta name="robots" content="index, follow" />
-
-  <!-- Verification -->
-  <meta name="google-site-verification"
-        content="joAorAxKwzYep5JybdSaFzleef91tKhWqGm6ABCo9uM" />
 
   <!-- Open Graph -->
   <meta property="og:type" content="article" />
@@ -25,7 +21,6 @@
   <meta property="og:url" content="https://sillyclickythings.com/terms.html" />
 
   <!-- Twitter Card -->
-  <meta name="twitter:card" content="summary" />
   <meta name="twitter:title" content="Terms of Use – Silly Clicky Things" />
   <meta name="twitter:description"
         content="Terms of use for Silly Clicky Things, a website offering free, silly, pointless online games and generators for entertainment purposes only." />
@@ -40,14 +35,8 @@
     "description": "Terms of use for Silly Clicky Things, a website offering free, silly, pointless online games and generators for entertainment purposes only."
   }
   </script>
+  <script src="/js/include-head.js"></script>
 
-  <!-- Global CSS -->
-  <link rel="stylesheet" href="/css/main.css" />
-
-  <!-- counter.dev analytics -->
-  <script src="https://cdn.counter.dev/script.js"
-          data-id="0738f13f-0c45-4dc5-8912-f18d6766a843"
-          data-utcoffset="0"></script>
 </head>
 
 <body class="sct-page">
