--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
     }
     </script>
   <script src="/js/include-head.js"></script>
+  <script src="/js/analytics.js" defer></script>
+
 
 </head>
 
