--- a/about.html
+++ b/about.html
@@ -35,6 +35,7 @@
   }
   </script>
   <script src="/js/include-head.js"></script>
+  <script src="/js/analytics.js" defer></script>
 </head>
 
 <body class="sct-page">
