--- a/contact.html
+++ b/contact.html
@@ -35,6 +35,8 @@
   }
   </script>
   <script src="/js/include-head.js"></script>
+  <script src="/js/analytics.js" defer></script>
+
 </head>
 
 <body class="sct-page">
