initialpush for mildly encouraging robot

--- a/about.html
+++ b/about.html
@@ -72,7 +72,7 @@
 
               <h2>Who am I?</h2>
               <p>
-                I’m Kate, a human person who really should be doing sensible adult, boring things.
+                I’m Katie, a human person who really should be doing sensible adult, boring things.
                 Instead I spend my evenings creating <em>pointless little games</em> like
                 “Lucky Rabbit Paw”, “CatXP” or whatever other nonsense my brain
                 dreams up. With a good strong cuppa and mischievous cat close by.
