--- a/generators/index.html
+++ b/generators/index.html
@@ -75,6 +75,24 @@
                     <span>Tap the Lucky Rabbit Paw</span>
                 </a>
             </div>
+            <div class="sct-spacer"></div>
+            <div class="sct-spacer"></div>
+
+            <p class="sct-subtitle">
+              You can also try out this other silly clicky thing:
+            </p>
+
+            <div class="sct-toy-list">
+              <div class="sct-toy-item">
+                <a class="sct-toy-link" href="/generators/mildly-encouraging-machine/">
+                  Mildly Encouraging Machine
+                </a>
+                <div class="sct-toy-sub">
+                  Reluctant encouragement, maybe.
+                </div>
+              </div>
+            </div>
+          <div class="sct-spacer"></div>
 
               <p>
                 More coming soon. Stay silly!
