--- a/generators/mildly-encouraging-machine/index.html
+++ b/generators/mildly-encouraging-machine/index.html
@@ -54,15 +54,14 @@
           <div class="sct-content">
             <div class="sct-game-frame">
               <div id="container">
-                <div id="badge"><BADGE_LABEL>: 0</div>
+                 <div id="badge">Input: 0</div>
 
                 <h1 id="game-title" class="sct-game-title">
-                  <H1_TITLE>
+                  The Mildly Encouraging Machine
                 </h1>
 
                 <p id="game-desc" class="sct-game-subtitle">
-                  <SUBTITLE>
-                </p>
+                  Click the machine. Encouragement might be provided. Sparingly.</p>
 
                 <img
                   id="robot"
@@ -72,9 +71,7 @@
                 />
 
                 <div class="sct-message-wrap">
-                  <p id="message" class="sct-counter">
-                    <DEFAULT_MESSAGE>
-                  </p>
+                  <pre id="message" class="sct-counter">Am I just eye-candy?</pre>
                 </div>
               </div>
             </div>
