--- a/index.html
+++ b/index.html
@@ -81,6 +81,25 @@
               </a>
               <span class="sct-hint">Start your lucky streak while we build the rest.</span>
             </div>
+      
+            <div class="sct-spacer"></div>
+            <div class="sct-spacer"></div>
+
+            <p class="sct-subtitle">
+              You can also try out this other silly clicky thing:
+            </p>
+
+            <div class="sct-toy-list">
+              <div class="sct-toy-item">
+                <a class="sct-toy-link" href="/generators/mildly-encouraging-machine/">
+                  Mildly Encouraging Machine
+                </a>
+                <div class="sct-toy-sub">
+                  Reluctant encouragement, maybe.
+                </div>
+              </div>
+            </div>
+          <div class="sct-spacer"></div>
 
             <div class="sct-footer-note">
               <span>🔧</span>
